# moonblokz-telemetry-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPER.md  EXAMPLES.md  PROJECT_SUMMARY.md  README.md  config.toml  examples.sh  telemetry_cli_specification.md
src/: client.rs  config.rs  main.rs  parser.rs
