[package]
name = "moonblokz-telemetry-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
